Fix recipe list & search bar misalignment

--- a/components/RecipeList.module.css
+++ b/components/RecipeList.module.css
@@ -1,6 +1,6 @@
 .recipe-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 3rem 5rem;
   max-width: 1400px;
   margin: auto;
